:information_source:  Adds about us info

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -41,3 +41,62 @@ h1.hero-text {
     line-height: normal;
     letter-spacing: -1.44px;
 }
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#about {
+    width: 1120px;
+}
+
+#groups {
+    width: 1120px;
+}
+
+.subTitle {
+    color: #000;
+    font-family: "Red Hat Display";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    padding: 0;
+}
+
+
+.sectionImage {
+    width: 550px;
+    height: 400px;
+    flex-shrink: 0;
+    object-fit: cover;
+
+}
+
+.mision,
+.vision,
+.objective {
+    display: flex;
+    align-items: center;
+    margin: 40px 0px;
+}
+
+p.about-description {
+    margin: 0;
+}
+
+.mision>.about-text {
+    margin-right: 20px;
+}
+
+.objective>.about-text {
+    margin-right: 20px;
+}
+
+.vision>.about-text {
+    margin-left: 20px;
+}
