--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -100,3 +100,28 @@ p.about-description {
 .vision>.about-text {
     margin-left: 20px;
 }
+
+.bold-subtitle {
+    color: #000;
+    text-align: center;
+    font-family: "Red Hat Display";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 50px;
+}
+
+.group-logo {
+    width: 170px;
+    height: 170px;
+    flex-shrink: 0;
+    object-fit: contain;
+    margin-bottom: 20px;
+}
+
+.group-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
