--- a/src/view/pages/menuAgrup/menuAgrup.css
+++ b/src/view/pages/menuAgrup/menuAgrup.css
@@ -17,6 +17,7 @@
     padding: 45px;
     border-radius: 20px;
     justify-content: center;
+
    
 }
 .title{
@@ -24,6 +25,8 @@
     color: #FFFF;
     text-align: center;
     margin-top: 41px;
+    display: flex;
+    flex-direction: column;
     
 }
 
@@ -34,3 +37,67 @@
     font-weight: bold;
     cursor: pointer;
 }
+
+
+.search {
+    width: 549.62px;
+    height: 25px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 25px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 3%;
+    right: 30%;
+}
+
+@media (max-width: 800px) {
+    .group_card{
+        flex-direction: column;
+        width: 160px;
+        
+        
+
+    }
+
+    .card{
+        width: 100%;
+        margin: 20px;
+        margin-right: 10px; 
+    }
+
+    .search {
+       width: 200px;
+       right: 20%;
+    }
+}
+
+@media (max-width: 1148px) {
+    .search{
+        width: 400.62px;
+    }
+
+}
+
+@media (max-width: 702px) {
+    .search{
+        width: 300px;
+        
+
+    }}
+
+@media (max-width: 578px) {
+        .search{
+            width: 80px;
+            right: 35%;
+        }
+
+        .card{
+            margin-left: 0px;
+        }
+
+        .group_card{
+            margin-left: 70px;
+        }
+    
+    }
