--- a/src/view/pages/login/login.module.css
+++ b/src/view/pages/login/login.module.css
@@ -13,7 +13,7 @@
     padding: 25px;
 }
 
-.login-form {
+.login_form {
     width: 400px;
 }
 
@@ -126,7 +126,7 @@ hr {
     flex-basis: 50%;
 }
 
-.saman-image {
+.saman_image {
     object-fit: cover;
     width: 50vw;
     height: 100vh;
@@ -148,7 +148,7 @@ hr {
         flex-basis: 100%;
     }
 
-    .login-form {
+    .login_form {
         width: 100% !important;
     }
 
