detallitos en css login y register

--- a/src/view/pages/login/login.module.css
+++ b/src/view/pages/login/login.module.css
@@ -17,6 +17,11 @@
     width: 400px;
 }
 
+/*Ocultar ojo de password*/
+::-ms-reveal{
+    display: none;
+}
+
 .title {
     width: 100%;
     text-align: left;
