--- a/src/view/pages/agrupacion/agrupacion.css
+++ b/src/view/pages/agrupacion/agrupacion.css
@@ -25,14 +25,16 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin-top: 80px ;
+    margin-top: 50px ;
     margin-right: 350px;
     margin-left: 350px;
 }
 
+
 .btns{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin: 30px;
 }
 
