--- a/src/view/pages/donaciones/donaciones.css
+++ b/src/view/pages/donaciones/donaciones.css
@@ -21,19 +21,27 @@
     color: #fff;
 }
 
-.texto {
+.contenedor_donaciones {
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    margin-top: 50px;
-    margin-right: 350px;
-    margin-left: 350px;
+    align-items: center;
+}
+
+.texto {
+    margin: 70px 0 30px 0;
+    color: #000;
     text-align: justify;
+    font-family: "Red Hat Display";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 50%;
 }
 
 .donaciones_form {
     width: 400px;
-    margin-top: 50px;
     margin-top: 20px;
 }
 
