--- a/src/view/components/Header2/Header2.css
+++ b/src/view/components/Header2/Header2.css
@@ -1,13 +1,18 @@
 .bar {
-  position: relative;
-  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+  z-index: 100;
+
+  display: flex;
   height: 90px;
   background-color: rgba(47, 72, 88, 1);
   justify-content: space-between;
 }
 
 .menu {
+  z-index: 10%;
   width: 135px;
   height: 150px;
   background-color: rgb(121, 151, 170);
