--- a/src/view/pages/menuAgrup/menuAgrup.css
+++ b/src/view/pages/menuAgrup/menuAgrup.css
@@ -11,22 +11,21 @@
 
 .card{
     width: 350px;
-    height: 170px;
-    background-color: bisque;
-    margin-right: 90px;
+    height: 175px;
+    background-color: rgb(255, 167, 59);
+    margin: 35px;
     padding: 45px;
     border-radius: 20px;
     justify-content: center;
-
    
 }
 .title{
-    font-size: 35px;
     color: #FFFF;
     text-align: center;
-    margin-top: 41px;
+    margin-top: -130px;
     display: flex;
-    flex-direction: column;
+    margin-left: 15px;
+    flex-direction: column
     
 }
 
@@ -49,6 +48,7 @@
     position: absolute;
     top: 3%;
     right: 30%;
+    z-index: 150;
 }
 
 @media (max-width: 800px) {
