--- a/src/view/pages/menuAgrup/menuAgrup.css
+++ b/src/view/pages/menuAgrup/menuAgrup.css
@@ -1,15 +1,15 @@
-.group_card{
+.group_card {
     display: flex;
     flex-direction: row;
     margin-top: 90px;
     margin-left: 190px;
     margin-bottom: 90px;
     margin-right: 190px;
-    justify-content:center;
+    justify-content: center;
 
 }
 
-.card{
+.card {
     width: 350px;
     height: 175px;
     background-color: rgb(255, 167, 59);
@@ -17,19 +17,14 @@
     padding: 45px;
     border-radius: 20px;
     justify-content: center;
-   
-}
-.title{
-    color: #FFFF;
-    text-align: center;
-    margin-top: -130px;
-    display: flex;
-    margin-left: 15px;
-    flex-direction: column
-    
+
 }
 
-.btn_info{
+.card_title {
+    color: #FFFF;
+}
+
+.btn_info {
     background-color: transparent;
     border: transparent;
     color: #FFFF;
@@ -52,52 +47,53 @@
 }
 
 @media (max-width: 800px) {
-    .group_card{
+    .group_card {
         flex-direction: column;
         width: 160px;
-        
-        
+
+
 
     }
 
-    .card{
+    .card {
         width: 100%;
         margin: 20px;
-        margin-right: 10px; 
+        margin-right: 10px;
     }
 
     .search {
-       width: 200px;
-       right: 20%;
+        width: 200px;
+        right: 20%;
     }
 }
 
 @media (max-width: 1148px) {
-    .search{
+    .search {
         width: 400.62px;
     }
 
 }
 
 @media (max-width: 702px) {
-    .search{
+    .search {
         width: 300px;
-        
 
-    }}
+
+    }
+}
 
 @media (max-width: 578px) {
-        .search{
-            width: 80px;
-            right: 35%;
-        }
-
-        .card{
-            margin-left: 0px;
-        }
-
-        .group_card{
-            margin-left: 70px;
-        }
-    
+    .search {
+        width: 80px;
+        right: 35%;
     }
+
+    .card {
+        margin-left: 0px;
+    }
+
+    .group_card {
+        margin-left: 70px;
+    }
+
+}
