protectedroute donaciones, link header footer logo unimet, css changes

--- a/src/view/pages/login/login.module.css
+++ b/src/view/pages/login/login.module.css
@@ -17,6 +17,11 @@
     width: 400px;
 }
 
+/*Ocultar ojo de password*/
+::-ms-reveal{
+    display: none;
+}
+
 .title {
     width: 100%;
     text-align: left;
@@ -132,6 +137,12 @@ hr {
     height: 100%;
     display: block;
 }
+
+
+.error_message {
+    color: red;
+    margin-top: 10px;
+  }
 
 @media screen and (max-width: 1000px) {
     .container {
