--- a/src/view/components/Header2/Header2.css
+++ b/src/view/components/Header2/Header2.css
@@ -1,13 +1,13 @@
-.bar{
+.bar {
     position: relative;
     display: flex;
     width: 100%;
     height: 90px;
     background-color: rgba(47, 72, 88, 1);
     justify-content: space-between;
-}
-
-.menu{
+  }
+  
+  .menu {
     width: 135px;
     height: 150px;
     background-color: rgb(121, 151, 170);
@@ -20,63 +20,48 @@
     position: absolute;
     right: 10%;
     top: 107%;
-    
-}
-.btn_p{
+  }
+  .btn_p {
     background-color: transparent;
     border: none;
     font-size: medium;
-    color: #FFFFFF;
+    color: #ffffff;
     cursor: pointer;
-}
-.l{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    text-decoration: none;
-    
-    font-weight: bold;
-}
-.logo_{
-    width: 126.91px;
-    height: 54px;
-    margin-left: 129.09px;
+  }
+  .l{
+      margin-top: 15px;
+      margin-bottom: 15px;
+      text-decoration: none;
+      font-weight: bold;
+  }
+  .logo_ {
+    width: 139.6px;
+    height: 59.4px;
+    margin-left: 184.86px;
     margin-top: 18px;
-    margin-bottom: 18px;
-    
-}
-
-.search{
-    width: 549.62px;
-    height: 25px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 25px;
-    background-color: #FFFFFF;
-    margin-top: 24px;
-    margin-bottom: 20px;
-
-
-}
-.perfil{
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  
+  .perfil {
     display: flex;
     flex-direction: row;
     margin-right: 184.86px;
     margin-top: 22px;
     margin-bottom: 28px;
-}
-.icon{
+  }
+  .icon {
     display: flex;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     width: fit-content;
     height: 23px;
     border-radius: 50px;
     padding: 15px;
     justify-content: center;
     align-items: center;
-
-}
-
-.btn_expand{
+  }
+  
+  .btn_expand {
     width: 30px;
     height: 30px;
     display: flex;
@@ -85,6 +70,18 @@
     border: transparent;
     cursor: pointer;
     padding-top: 8px;
-
-
-}
+  }
+  
+  @media (max-width: 1148px) {
+    .logo_{
+      margin-left: 0px;
+    }
+  
+  }
+  
+  @media (max-width: 923px) {
+    .perfil{
+      margin-right: 0px;
+    }
+  
+  }
