--- a/src/view/pages/Perfil/Perfil.css
+++ b/src/view/pages/Perfil/Perfil.css
@@ -5,10 +5,10 @@
     flex-direction: row;
     justify-content: center;
     
-    margin-top: 97px;
+    margin-top: 150px;
     margin-left: 160px;
     margin-right: 160px;
-    margin-bottom: 160px;
+    margin-bottom: 140px;
 
 }
 .t{
@@ -41,16 +41,17 @@
 }
 
 .User_edit{
-    margin-left: 15px;
+    z-index: 5%;
+    margin-left: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: relative;
     border-radius: 5px;
     border: 1px solid #A9A9A9;
     padding: 20px;
     background-color: #E9E9E9;
-    padding: 60pxpx;
-    width: 740px;
+    width: 820px;
     height: 368px;
 
 
@@ -59,7 +60,9 @@
 .c{
     display: flex;
     flex-direction: column;
-    margin:20px
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
 
 }
 
@@ -77,13 +80,66 @@
 
 .btn_edit{
     position: absolute;
-    right: 36%;
-    bottom: 25.5%;
+    right: 45%;
+    bottom: 5%;
     color: #FFF;
     font-weight: bold;
     padding: 12px;
     border-radius: 10px;
-    border:none;
+    border: none;
     background-color: #FD8204;
     cursor: pointer;
+    margin-top: 20px; 
+}
+
+
+
+
+@media (max-width: 1101px) {
+    .User_cont{
+        flex-direction: column;
+
+    }
+
+    .User_edit{
+        margin-top: 30px;
+        margin-left: 3px;
+    }
+
+    .btn_edit{
+        bottom: -20%;
+        right: 45%;
+
+    }
+
+}
+
+
+@media (max-width: 970px) {
+    .User_cont{
+        margin-left: 40px;
+
+    }
+
+    .User_edit{
+        flex-direction: column;
+        width: min-content;
+        height: min-content;
+    }
+
+    .btn_edit{
+        bottom: -10%;
+        right: 40%;
+
+    }
+}
+
+
+@media (max-width: 604px) {
+    .btn_edit{
+        bottom: -10%;
+        right: 40%;
+
+    }
+
 }
