--- a/src/view/pages/agrupacion/agrupacion.css
+++ b/src/view/pages/agrupacion/agrupacion.css
@@ -13,12 +13,9 @@
     position: absolute;
     bottom: 25%;
     top: 45%;
-
     right: 39% ;
     font-size: 70px;
     color: #fff;
-    
-
 }
 
 .Info_card{
@@ -30,7 +27,6 @@
     margin-left: 350px;
 }
 
-
 .btns{
     display: flex;
     flex-direction: row;
@@ -41,7 +37,6 @@
 .btns_{
     width: max-content;
     padding: 13px;
-
     height: 40px;
     border-radius: 20px;
     margin-right: 25px;
@@ -50,21 +45,23 @@
     color: #FFFF;
     cursor: pointer;
 }
+
 .icon_i{
     width: 40px;
     height: 40px;
     margin: 10px;
 }
+
 .contact_us{
     margin-top: 0px;
     display: flex;
     flex-direction: row;
 
 }
+
 .testimonies{
     display: flex;
     flex-direction: row;
-    
 }
 
 .feedback_box{
@@ -75,10 +72,23 @@
     padding: 26px;
     text-align: center;
     margin-right: 15px;
-
 }
 
 .text-box{
-    border: 1px solid #A9A9A9;
+    border: 1px solid #A9A9A9;  
+}
+
+@media (max-width: 1091px) {
+    .Info_card{
+        margin-left: 80px;
+    }}
+
+@media (max-width: 710px) {
+        .paragraph{
+            height: 100px;
+        }
     
+    .title_g{
+        right: 19%;
+    }
 }
