--- a/src/view/pages/donaciones/donaciones.css
+++ b/src/view/pages/donaciones/donaciones.css
@@ -1,4 +1,4 @@
-.imagen{
+.imagen {
     display: flex;
 }
 
@@ -9,42 +9,40 @@
     width: 100%;
     object-fit: cover;
     display: block;
-<<<<<<< Updated upstream
-=======
     object-position: center 65%;
->>>>>>> Stashed changes
 }
 
 .title {
     position: absolute;
     bottom: 25%;
     top: 45%;
-    right: 39% ;
+    right: 39%;
     font-size: 70px;
     color: #fff;
 }
 
-.texto{
+.contenedor_donaciones {
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-<<<<<<< Updated upstream
-    margin-top: 50px ;
-=======
-    margin-top: 80px ;
->>>>>>> Stashed changes
-    margin-right: 350px;
-    margin-left: 350px;
+    align-items: center;
+    margin-top: -15px;
+}
+
+.texto {
+    margin: 70px 0 30px 0;
+    color: #000;
     text-align: justify;
+    font-family: "Red Hat Display";
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 50%;
 }
 
 .donaciones_form {
     width: 400px;
-<<<<<<< Updated upstream
-    margin-top: 50px;
-=======
     margin-top: 20px;
->>>>>>> Stashed changes
 }
 
 
