--- a/src/view/pages/menuAgrup/menuAgrup.css
+++ b/src/view/pages/menuAgrup/menuAgrup.css
@@ -1,36 +1,108 @@
-.group_card{
+.group_card {
     display: flex;
     flex-direction: row;
     margin-top: 90px;
     margin-left: 190px;
     margin-bottom: 90px;
     margin-right: 190px;
-    justify-content:center;
+    justify-content: center;
 
 }
 
-.card{
+.card {
     width: 350px;
-    height: 170px;
-    background-color: bisque;
-    margin-right: 90px;
+    height: 175px;
+    background-color: rgb(255, 167, 59);
+    margin: 35px;
     padding: 45px;
     border-radius: 20px;
     justify-content: center;
-   
+    
+
 }
-.title{
+
+.card_title {
+  
     font-size: 35px;
     color: #FFFF;
     text-align: center;
     margin-top: 41px;
-    
+    display: flex;
+    flex-direction: column;
 }
 
-.btn_info{
+.btn_info {
     background-color: transparent;
     border: transparent;
     color: #FFFF;
     font-weight: bold;
     cursor: pointer;
+    margin-left: 30%;
+    
+}
+
+
+.search {
+    width: 549.62px;
+    height: 25px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 25px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 3%;
+    right: 30%;
+    z-index: 150;
+}
+
+@media (max-width: 800px) {
+    .group_card {
+        flex-direction: column;
+        width: 160px;
+
+
+
+    }
+
+    .card {
+        width: 100%;
+        margin: 20px;
+        margin-right: 10px;
+    }
+
+    .search {
+        width: 200px;
+        right: 20%;
+    }
+}
+
+@media (max-width: 1148px) {
+    .search {
+        width: 400.62px;
+    }
+
+}
+
+@media (max-width: 702px) {
+    .search {
+        width: 300px;
+
+
+    }
+}
+
+@media (max-width: 578px) {
+    .search {
+        width: 80px;
+        right: 35%;
+    }
+
+    .card {
+        margin-left: 0px;
+    }
+
+    .group_card {
+        margin-left: 70px;
+    }
+
 }
