--- a/src/view/pages/menuAgrup/menuAgrup.css
+++ b/src/view/pages/menuAgrup/menuAgrup.css
@@ -17,6 +17,9 @@
     padding: 45px;
     border-radius: 20px;
     justify-content: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     
 
 }
