--- a/src/view/components/footer/footer.module.css
+++ b/src/view/components/footer/footer.module.css
@@ -8,11 +8,10 @@
     margin-top: 64px;
 }
 
-.footer-content {
+.footer_content {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
 }
 
 .logoFooter {
@@ -26,7 +25,7 @@
     padding: 0;
 }
 
-.nav-links-footer {
+.nav_links_footer {
     color: #FFF;
     text-align: center;
     font-family: "Red Hat Display";
@@ -37,7 +36,7 @@
     text-decoration-line: underline;
 }
 
-.footer-title {
+.footer_title {
     color: #FFF;
     font-family: "Red Hat Display";
     font-size: 18px;
@@ -48,7 +47,7 @@
     margin: 12px 0px;
 }
 
-.footer-title-links {
+.footer_title_links {
     color: #FFF;
     font-family: "Red Hat Display";
     font-size: 18px;
@@ -60,7 +59,7 @@
     text-align: left;
 }
 
-.contact-footer {
+.contact_footer {
     color: #FFF;
     text-align: center;
     font-family: "Red Hat Display";
@@ -71,10 +70,28 @@
     margin-left: 10px;
 }
 
-.list-item-footer {
+.list_item_footer {
     margin: 12px 0px;
 }
 
-.icon-text {
+.icon_text {
     display: flex;
+}
+
+.nav_footer {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (max-width: 820px) {
+    .Footer {
+        height: auto;
+        align-items: center;
+    }
+
+    .footer_content {
+        flex-direction: column;
+        margin: 40px 15%;
+    }
 }
