--- a/src/view/pages/agrupacion/agrupacion.css
+++ b/src/view/pages/agrupacion/agrupacion.css
@@ -1,14 +1,20 @@
 .imagen_group{
     display: flex;
-}
-.foto {
     position: relative;
     z-index: -1;
     height: 90vh;
     width: 100%;
     object-fit: cover;
     display: block;
+    justify-content: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+
+
+
 .title_g{
     position: absolute;
     bottom: 25%;
