fixs interface error register

--- a/src/view/pages/register/register.module.css
+++ b/src/view/pages/register/register.module.css
@@ -10,6 +10,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 25px;
+
 }
 
 .register_form {
@@ -25,6 +27,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    margin: 27px 0px;
 }
 
 .forgot {
@@ -74,7 +77,8 @@ button.send {
     height: 100%;
     display: block;
 }
-.error_message{
+
+.error_message {
     color: red;
     margin-top: 15px;
 }
@@ -94,7 +98,7 @@ button.send {
         flex-basis: 100%;
     }
 
-    .register-form {
+    .register_form {
         width: 100% !important;
     }
 
