--- a/src/view/components/Header2/Header2.module.css
+++ b/src/view/components/Header2/Header2.module.css
@@ -1,6 +1,7 @@
 .bar {
   position: relative;
   display: flex;
+  flex-direction: row;
   width: 100%;
   height: 90px;
   background-color: rgba(47, 72, 88, 1);
@@ -35,20 +36,22 @@
     
     font-weight: bold;
 }
-.logo_ {
-  width: 126.91px;
-  height: 54px;
-  margin-left: 129.09px;
+.logo {
+  width: 0 auto;
+  height: auto;
+  margin-left: 18px;
   margin-top: 18px;
   margin-bottom: 18px;
 }
 
 .perfil {
   display: flex;
-  flex-direction: row;
-  margin-right: 184.86px;
-  margin-top: 22px;
-  margin-bottom: 28px;
+  width: fit-content;
+  height: 0 auto;
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
+
 }
 .icon {
   display: flex;
@@ -61,15 +64,18 @@
   align-items: center;
 }
 
+
 .btn_expand {
-  width: 30px;
-  height: 30px;
   display: flex;
+  width: fit-content;
+  height: 0 auto;
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
   background-color: transparent;
   border-radius: 100px;
   border: transparent;
   cursor: pointer;
-  padding-top: 8px;
 }
 
 @media (max-width: 1148px) {
