--- a/src/view/pages/dashboard/dashboard.module.css
+++ b/src/view/pages/dashboard/dashboard.module.css
@@ -1,10 +1,6 @@
 .category_card {
     display: flex;
-    flex-direction: row;
-    margin-top: 90px;
-    margin-left: 190px;
-    margin-bottom: 90px;
-    margin-right: 190px;
+    flex-wrap: wrap;
     justify-content: center;
 
 }
@@ -13,7 +9,7 @@
     width: 350px;
     height: 170px;
     background-color: orange;
-    margin-right: 90px;
+    margin: 20px;
     padding: 45px;
     border-radius: 20px;
     justify-content: center;
